[package]
name = "garaza-pico-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.1", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.8.1"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"


[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "f55ebef380b49d109216e2cd6821fa1c35202748" }